--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ zuul.routes.usuarios.path=/api/alumnos/**
 # Micro-Servicio curso
 zuul.routes.cursos.service-id=microservice-cursos
 zuul.routes.cursos.path=/api/cursos/**
+# Micro-Servicio examen
+zuul.routes.examenes.service-id=microservice-examenes
+zuul.routes.examenes.path=/api/examenes/**
