--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ zuul.routes.cursos.path=/api/cursos/**
 # Micro-Servicio examen
 zuul.routes.examenes.service-id=microservice-examenes
 zuul.routes.examenes.path=/api/examenes/**
+# Micro-Servicio respuesta
+zuul.routes.respuestas.service-id=microservice-respuestas
+zuul.routes.respuestas.path=/api/respuestas/**
